Fix: duplikált MyMovies megjelenítés javítva, App.jsx rendezve